[tool.poetry]
name = "llmstack"
version = "0.1.4"
description = "Low-code platform to build generative AI apps, chatbots and agents with your data"
authors = ["Ajay Chintala"]
license = "ELv2"
readme = "README.md"
include = [
  "llmstack/client/build/*",
  "llmstack/client/build/static/css/*",
  "llmstack/client/build/static/images/*",
  "llmstack/client/build/static/js/*",
  "llmstack/client/build/static/media/*",
]
exclude = [
  "llmstack/client/src/*",
  "llmstack/client/public/*",
]
packages = [
    {include = "llmstack"},
]

[tool.poetry.scripts]
llmstack = "llmstack.cli:main"
llmstack-runner = "llmstack.common.runner.server:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
playwright = "1.42.0"
spacy = {version = "^3.6.0"}
docker = {version ="^6.1.3"}
sqlalchemy = {version = "^1.4.46" }
websockify = {version ="^0.11.0"}
geoip2 = {version = "^4.7.0" }
typing-extensions = {version = "^4.5.0" }
twisted = {version = "^22.10.0" }
uvloop = [
  {version = "^0.17.0",  platform = "darwin" },
  {version = "^0.17.0",  platform = "linux" }
  ]
websockets = {version = "^10.4" }
beautifulsoup4 = {version = "^4.12.2" }
weaviate-client = {version = "^3.22.1" }
google-auth = {version = "^2.22.0" }
striprtf = {version = "^0.0.22" }
toml = {version ="^0.10.2"}

junos-eznc = {version="^2.6.8", optional=true}
chromadb = "^0.5.3"
psycopg2-binary = "^2.9.9"
pydantic = "2.7.4"
daphne = "^4.1.2"
pynacl = "^1.5.0"

[tool.poetry.extras]
networking = ["junos-eznc"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[tool.poetry.group.server]

[tool.poetry.group.server.dependencies]
django = {version = "^5.0", python = ">=3.10,<3.12" }
drf-yaml = {version = "^3.0.1"}
django-allauth = {version = "^0.61.1"}
django-environ = {version = "^0.10.0"}
django-picklefield = {version = "^3.1"}
django-redis = {version = "^5.2.0"}
django-rq = {version = "^2.8.1"}
djangorestframework = {version = "^3.14.0"}
django-flags = {version = "^5.0.12"}
django-jsonform = {version = "^2.17.4"}
django-ratelimit = {version = "^4.1.0"}
croniter = {version ="^2.0.1"}
pykka = {version = "^3.1.1" }
asgiref = {version = "^3.6.0" }
channels = {version = "^4.0.0" }
importlib-metadata = {version = "^6.0.0" }
pyyaml = {version = "^6.0" }
redis = {version = "^4.5.4" }
rq = {version = "^1.15.1" }
sendgrid = {version = "^6.10.0" }
python-liquid = {version ="^1.12.1"}
orjson = {version = "^3.8.14" }
ujson = {version = "^5.7.0" }
openai = {version ="^1.13.3"}
grpcio-health-checking = {version ="^1.53.0"}


[tool.poetry.group.processors]

[tool.poetry.group.processors.dependencies]
scrapy = {version ="^2.11.0"}
unstructured = {version = "0.12.6", python=">=3.10,<3.12"}
google-generativeai = {version ="^0.3.1"}
scrapy-playwright = {version ="^0.0.33"}
pillow-heif = {version ="^0.15.0"}
opencv-python = {version ="^4.9.0.80"}
unstructured-inference = {version ="^0.7.23"}
unstructured-pytesseract = {version ="^0.3.12"}
python-docx = {version ="^1.1.0"}
cohere = {version ="5.5.4"}
google-cloud-speech = {version ="^2.26.0"}
psycopg2-binary = {version = "^2.9.5" }
mysqlclient = {version ="^2.2.4"}
tiktoken = {version = "^0.4.0" }
ffmpeg-python = {version = "^0.2.0" }
pydub = {version = "^0.25.1" }
boto3 = {version = "^1.26.122" }
botocore = {version = "^1.29.122" }
yt-dlp = {version = "^2023.9.24" }
pdf2image = {version = "^1.16.3" }
pdfminer-six = {version = "^20221105" }
markdown = {version = "^3.4.4" }
python-pptx = {version = "^0.6.21" }
python-magic = {version = "^0.4.27" }
anthropic = "^0.30.0"


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
